fix: Fix menu visible

--- a/src/components/Layout/Hamburger/Hamburger.module.scss
+++ b/src/components/Layout/Hamburger/Hamburger.module.scss
@@ -5,6 +5,8 @@
     display: none;
   }
 
+  position: relative;
+  z-index: 10;
   cursor: pointer;
   width: 21px;
   height: 18px;
